# l-systems-maya

./: .clang-format  CMakeLists.txt
LSystem/: CMakeLists.txt
LSystem/src/: LSystem.cpp  LSystem.h  main.cpp  matrix.h  vec.cpp  vec.h
LSystemMaya/: CMakeLists.txt
LSystemMaya/src/: LSystemCmd.cpp  LSystemCmd.h  LSystemNode.cpp  LSystemNode.h  PluginMain.cpp  cylinder.cpp  cylinder.h  macros.h
cmake/: CoreUtils.cmake  FindMaya.cmake
scripts/: format.ps1
